# secure-query-management-system

./: README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  router.py
app/core/: config.py  enums.py  exceptions.py  security.py
app/db/: base.py  session.py
app/modules/audit/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/queries/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  workflow.py
app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
scripts/: seed.py
secure_query_management_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
